k8s/coma/apps/commafeed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed
  namespace: commafeed
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "commafeed.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: commafeed
                port:
                  number: 80
  tls:
    - hosts:
        - "commafeed.artichoke.cc"
      secretName: tls-secret
